src/objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Scan_Describe_Message__c</fullName>
        <label>Code Scan Describe Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Scan_Status__c</fullName>
        <label>Code Scan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comparing_Connections__c</fullName>
        <label>Comparing Connections</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connection_Compare_Describe_Message__c</fullName>
        <label>Connection Compare Describe Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On_Heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created On Heroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_on_Heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete on Heroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Git_Repo__c</fullName>
        <label>Git Repo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Describe_Error__c</fullName>
        <label>Metadata Describe Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metadata_Last_Described__c</fullName>
        <label>Metadata Last Described</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Organization_URL__c</fullName>
        <label>Organization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Development_Environment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Development Environment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Refresh_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scan_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scan Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Created_On_Heroku__c</columns>
        <columns>Metadata_Describe_Error__c</columns>
        <columns>Metadata_Last_Described__c</columns>
        <columns>Organization_URL__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Primary_Development_Environment__c</columns>
        <columns>Refresh_Running__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <recordTypes>
        <fullName>GitHub_Repository</fullName>
        <active>true</active>
        <label>GitHub Repository</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Production_Developer</fullName>
        <active>true</active>
        <label>Production/Developer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sandbox</fullName>
        <active>true</active>
        <label>Sandbox</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>